--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false && npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
@@ -25,7 +25,6 @@
     "nodemon": "^1.17.4",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
-    "react-router-dom": "^4.2.2",
     "stripe": "^6.1.0"
   }
 }
