--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": ">=10.0.0",
-    "npm": ">=5.6.0"
+    "node": ">=4.3 <7.0",
+    "npm": ">=1.0.0"
   },
   "scripts": {
     "start": "node index.js",
